[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.55.0",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index>=0.12.44",
    "llama-index-core>=0.12.44",
    "llama-index-llms-anthropic>=0.7.5",
    "llama-index-llms-openai>=0.4.7",
    "llama-index-readers-file>=0.4.9",
    "openai>=1.93.0",
    "pypdf>=5.7.0",
    "streamlit>=1.46.1",
    "requests>=2.32.4",
]
